--- a/manuscript/references.bib
+++ b/manuscript/references.bib
@@ -9,6 +9,20 @@
 	journal = {medRxiv}
 }
 
+@article{Chen2006,
+    author = {Chen, Ying Qing and Hu, Chengcheng and Wang, Yan},
+    title = "{Attributable risk function in the proportional hazards model for censored time-to-event}",
+    journal = {Biostatistics},
+    volume = {7},
+    number = {4},
+    pages = {515-529},
+    year = {2006},
+    month = {02},
+    issn = {1465-4644},
+    doi = {10.1093/biostatistics/kxj023},
+    url = {https://doi.org/10.1093/biostatistics/kxj023},
+    eprint = {https://academic.oup.com/biostatistics/article-pdf/7/4/515/609162/kxj023.pdf},
+}
 
 @article{Dora2020,
 author = {Dora, Amy V. and Winnett, Alexander and Jatt, Lauren P. and Davar, Kusha and Watanabe, Mika and Sohn, Linda and Kern, Hannah S. and Graber, Christopher J. and Goetz, Matthew B.},
@@ -106,6 +120,19 @@ doi = {10.1056/NEJMoa2005412}
 	URL = {https://www.medrxiv.org/content/early/2020/06/09/2020.06.09.20125237},
 	eprint = {https://www.medrxiv.org/content/early/2020/06/09/2020.06.09.20125237.full.pdf},
 	journal = {medRxiv}
+}
+
+@article{Samuelsen2008,
+author = {Samuelsen, Sven Ove and Eide, Geir Egil},
+title = {Attributable fractions with survival data},
+journal = {Statistics in Medicine},
+volume = {27},
+number = {9},
+pages = {1447-1467},
+doi = {10.1002/sim.3022},
+url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/sim.3022},
+eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1002/sim.3022},
+year = {2008}
 }
 
 @article {Stall2020,
